# hoca

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  hoca.cabal  stack-13.20.yaml  stack-local.yaml  stack.yaml  test.lambda  test.rb
examples/: Tokens.hs  dfs-flatten.fp  evenodd.fp  fib_llist.fp  fib_memo.fp  flatten.fp  flip.fp  foldsum.fp  id.fp  isort-fold.fp  isort.fp  mappplus.fp  mergesort-dc-binary.fp  mergesort-dc.fp  mergesort-dc2.fp  mss.fp  okasaki-parser-ab.fp  okasaki-parser-anbn.fp  okasaki-parser-string.fp  op.fp  pred.fp  rev-dl.fp  rev-fletf.fp  rev-foldl.fp  rev.fp  rpm-lazy.fp  sum.fp  sum_sqs3.fp  take_lazy.fp
examples/atrss/: dfs-flatten.trs  evenodd.trs  fib_llist.trs  fib_memo.trs  flatten.trs  flip.trs  foldsum.trs  id.trs  isort-fold.trs  isort.trs  mappplus.trs  mergesort-dc.trs  mss.trs  okasaki-parser-ab.trs  okasaki-parser-anbn.trs  okasaki-parser-string.trs  pred.trs  rev-dl.trs  rev-fletf.trs  rev-foldl.trs  rev.trs  rpm-lazy.trs  sum.trs  sum_sqs3.trs  take_lazy.trs
examples/ocaml/: fib_llist.fp  fib_memo.fp  flatten.fp  id.fp  mappplus.fp  mss.fp  pred.fp  rev-fletf.fp  rev.fp  rpm-lazy.fp  sum.fp  take_lazy.fp
examples/trss/: dfs-flatten.trs  evenodd.trs  fib_llist.trs  fib_memo.trs  flatten.trs  flip.trs  foldsum.trs  id.trs  isort-fold.trs  isort.trs  mappplus.trs  mergesort-dc.trs  mss.trs  okasaki-parser-ab.trs  okasaki-parser-anbn.trs  okasaki-parser-string.trs  pred.trs  rev-dl.trs  rev-fletf.trs  rev-foldl.trs  rev.trs  rpm-lazy.trs  sum.trs  sum_sqs3.trs  take_lazy.trs
pcf2trs/: Main.hs
src/: PCF2TRS.hs
src/Data/Rewriting/Applicative/: Rule.hs  Rules.hs  SimpleTypes.hs  Term.hs
src/Hoca/: ATRS.hs  DFA.hs  FP.hs  Interactive.hs  Narrowing.hs  PCF.hs  PCF2Atrs.hs  PCF2Trs.hs  Problem.hs  Strategy.hs  TAGS  Transform.hs  TreeGrammar.hs  Types.hs  URM.hs  Uncurry.hs  UsableRules.hs  Utils.hs
src/Hoca/Data/: MLTypes.hs  Symbol.hs  TreeGrammar.hs  URM.hs
src/Hoca/PCF/: Core.hs  Desugar.hs  Sugar.hs
src/Hoca/PCF/Core/: DMInfer.hs  Types.hs
src/Hoca/PCF/Sugar/: Parse.hs  Pretty.hs  Types.hs
src/Hoca/Problem/: DFA.hs  DMInfer.hs  Ops.hs  Type.hs
src/Hoca/SizeTypes/: Infer.hs
src/Hoca/Transform/: Defunctionalize.hs  Inlining.hs  Instantiate.hs  Narrowing.hs  Uncurry.hs  UsableRules.hs
trss/: fib_memo.trs  flatten.trs  mappplus.trs  okasaki-parser-ab.trs  pred.trs  rev-dl.trs  rev-fletf.trs  rev.trs  rpm-lazy.trs  take_lazy.trs
