name:          hoca
version:       0.2
stability:     experimental
author:        Martin Avanzini, Ugo Dal Lago
maintainer:    martin.avanzini@uibk.ac.at
license:       MIT
license-file:  LICENSE
category:      Logic
synopsis:      Higher Order Complexity Analysis
description:   
build-type:    Simple
cabal-version: >= 1.8


source-repository head
    type: git
    location: git://github.com/mzini/hoca

executable pcf2trs
 hs-source-dirs: pcf2trs
 main-is: Main.hs
 build-depends: ansi-wl-pprint >= 0.6 && < 0.7
              , base >= 4 && < 5
              , containers >= 0.5 && < 0.6
              , graphviz >= 2999.17.0.1
              , hoca == 0.2
              , multiset >= 0.2 && < 0.3
              , term-rewriting >= 0.2 && < 0.3
              , text >= 1.1
 extensions:
        TypeOperators
 ghc-options:       
   -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

library
    hs-source-dirs:
        src
    exposed-modules: Data.Rewriting.Applicative.Term
                     Data.Rewriting.Applicative.Rule
                     Data.Rewriting.Applicative.Rules
                     Data.Rewriting.Applicative.SimpleTypes
                     Hoca.Utils
                     Hoca.Strategy
                     Hoca.Problem
                     Hoca.DFA
                     Hoca.PCF.Sugar
                     Hoca.PCF.Sugar.Types
                     Hoca.PCF.Sugar.Parse
                     Hoca.PCF.Sugar.Pretty                    
                     Hoca.PCF.Core
                     Hoca.PCF.Core.Types                     
                     Hoca.PCF.Core.DMInfer                     
                     Hoca.PCF.Desugar
                     Hoca.URM
                     Hoca.PCF2Atrs
                     Hoca.Transform
                     Hoca.UsableRules
                     Hoca.Uncurry
                     Hoca.Narrowing
                     Hoca.TreeGrammar
    other-modules:
    build-depends: ansi-wl-pprint >= 0.6 && < 0.7
                 , base >= 4 && < 5
                 , containers >= 0.3 && < 0.6
                 , graphviz >= 2999.17.0.1
                 , mtl >= 1.1 && < 2.3
                 , multiset >= 0.2 && < 0.3
                 , parsec >= 3.1 && < 3.2
                 , term-rewriting >= 0.2 && < 0.3
                 , text >= 1.1
    extensions: TypeSynonymInstances
              , FlexibleContexts 
              , FlexibleInstances
              , GeneralizedNewtypeDeriving
              , TypeOperators
              , ViewPatterns
              , TupleSections
    ghc-options:       
     -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
