name:          hoca
version:       0.4
stability:     experimental
author:        Martin Avanzini, Ugo Dal Lago, Georg Moser
maintainer:    Martin Avanzini <martin.avanzini@uibk.ac.at>
license:       MIT
license-file:  LICENSE
category:      Program Analysis
synopsis:      Higher Order Complexity Analysis
description:
build-type:    Simple
cabal-version: >= 1.8


source-repository head
    type: git
    location: git://github.com/ComputationWithBoundedResources/hoca

executable pcf2trs
 hs-source-dirs: pcf2trs
 main-is: Main.hs
 build-depends: ansi-wl-pprint >= 0.6 && < 0.7
              , base >= 4 && < 5
              , containers >= 0.5 && < 0.6
              , graphviz >= 2999.17.0.1
              , hoca == 0.4
              , multiset >= 0.2 && < 0.3
              , term-rewriting >= 0.2 && < 0.3
              , term-rewriting-applicative >= 0.1 && < 0.2
              , text >= 1.1
 extensions: TypeOperators
           , FlexibleContexts 
               
 ghc-options:       
   -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

library
    hs-source-dirs:
        src
    exposed-modules: Hoca.Utils
                     Hoca.Strategy
                     Hoca.Problem
                     Hoca.Problem.DFA
                     Hoca.Problem.Type
                     Hoca.Problem.DMInfer                     
                     Hoca.Problem.Ops                     
                     Hoca.PCF.Sugar
                     Hoca.PCF.Sugar.Types
                     Hoca.PCF.Sugar.Parse
                     Hoca.PCF.Sugar.Pretty                    
                     Hoca.PCF.Core
                     Hoca.PCF.Core.Types                     
                     Hoca.PCF.Core.DMInfer                     
                     Hoca.PCF.Desugar
                     Hoca.Transform
                     Hoca.Transform.Defunctionalize
                     Hoca.Transform.UsableRules
                     Hoca.Transform.Inlining                     
                     Hoca.Transform.Uncurry
                     Hoca.Transform.Instantiate                     
                     Hoca.Data.MLTypes                     
                     Hoca.Data.TreeGrammar
    other-modules:
    build-depends: ansi-wl-pprint >= 0.6 && < 0.7
                 , base >= 4 && < 5
                 , containers >= 0.3 && < 0.6
                 , graphviz >= 2999.17.0.1
                 , mtl >= 1.1 && < 2.3
                 , multiset >= 0.2 && < 0.3
                 , parsec >= 3.1 && < 3.2
                 , term-rewriting >= 0.2 && < 0.3
                 , term-rewriting-applicative >= 0.1 && < 0.2                 
                 , text >= 1.1
    extensions: TypeSynonymInstances
              , FlexibleContexts 
              , FlexibleInstances
              , GeneralizedNewtypeDeriving
              , TypeOperators
              , ViewPatterns
              , TupleSections
              , DataKinds
              , TypeFamilies              
              , GADTs
              , DeriveFunctor
              , DeriveFoldable
    ghc-options:       
     -threaded -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
