name:          hoca
version:       0.5
stability:     experimental
author:        Martin Avanzini, Ugo Dal Lago, Georg Moser
maintainer:    Martin Avanzini <martin.avanzini@uibk.ac.at>
license:       MIT
license-file:  LICENSE
category:      Program Analysis
synopsis:      Higher Order Complexity Analysis
description:
build-type:    Simple
cabal-version: >= 1.8


source-repository head
    type: git
    location: git://github.com/ComputationWithBoundedResources/hoca

executable pcf2trs
 hs-source-dirs: pcf2trs
 main-is: Main.hs
 build-depends: ansi-wl-pprint
              , base
              , containers
              , hoca == 0.5
              , multiset
              , term-rewriting
              , term-rewriting-applicative
              , cmdargs
              , text
 extensions: TypeOperators
           , FlexibleContexts
 ghc-options:
   -Wall -O2 -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

library
    hs-source-dirs:
        src
    exposed-modules: Hoca.Utils
                     Hoca.Strategy
                     Hoca.Problem
                     Hoca.Problem.DFA
                     Hoca.Problem.Type
                     Hoca.Problem.DMInfer
                     Hoca.Problem.Ops
                     Hoca.PCF.Sugar
                     Hoca.PCF.Sugar.Types
                     Hoca.PCF.Sugar.Parse
                     Hoca.PCF.Sugar.Pretty
                     Hoca.PCF.Core
                     Hoca.PCF.Core.Types
                     Hoca.PCF.Core.DMInfer
                     Hoca.PCF.Desugar
                     Hoca.Transform
                     Hoca.Transform.Defunctionalize
                     Hoca.Transform.UsableRules
                     Hoca.Transform.Inlining
                     Hoca.Transform.Uncurry
                     Hoca.Transform.Instantiate
                     Hoca.Data.Symbol
                     Hoca.Data.MLTypes
                     Hoca.Data.TreeGrammar
    other-modules:
    build-depends: ansi-wl-pprint
                 , base
                 , containers
                 , graphviz
                 , mtl
                 , multiset
                 , parsec
                 , term-rewriting
                 , term-rewriting-applicative
                 , text
    extensions: TypeSynonymInstances
              , FlexibleContexts
              , FlexibleInstances
              , GeneralizedNewtypeDeriving
              , MultiParamTypeClasses
              , TypeOperators
              , ViewPatterns
              , TupleSections
              , DataKinds
              , TypeFamilies
              , GADTs
              , DeriveFunctor
              , DeriveFoldable
              , DeriveTraversable
    ghc-options:
     -Wall -O2 -fno-warn-orphans -fno-spec-constr-count
